       unit type.
     * Fixed broken death events.
     * Lady Outlaw does not lose her experience on 'Return to Oldwood'.
     * Restored missing leading animations for Noble Commander and
       Noble Lord, and gave leading animations to Wesfolk Outcast line.
   * Under the Burning Suns:
     * Made Elyssa loyal+quick instead of quick+intelligent.
 * Graphics:
   * New or updated unit frames: Gryphon Rider, Gryphon Master,
     Revenant.
 * Language and i18n:
   * Renamed the --dummylocales parameter to --dummy-locales.
   * Fixed the po extraction tool to also include the id field.
   * updated translations: Czech, Danish, Dutch, French, Galician, German,
     Hungarian, Italian, Lithuanian, Polish, Slovak, Spanish
 * Terrain:
   * New graphic variations for Oasis (Dd^Do) terrain.
 * User interface:
   * Rewrote the layout algorithm for the new widgets.
   * Fixed the font loading when the data directory is overridden.
   * Removed text wrapping around background image in story screens; it is
     better to always use the whole screen width if possible (fixes the
     first story screens in Descent into Darkness and Under the Burning Suns).
   * Tweaked the algorithm that extends the darkened area below long
     story texts so that it gives a more consistent appearance.
   * Added a border and blurring to story screens' text blocks.
   * Improved wrapping in the new widgets.
   * Improved easy close handling.
 * WML engine:
   * Added the 'round' key to [set_variable].
 * Miscellaneous and bug fixes:
   * New memory allocator introduced to the engine. It should
     produce 5-10% savings in memory usage on 64-bit systems.
   * Included extra headers for certain g++ versions (patch #1113).
   * Fixed random memory corruption/assertion failure/massive leak due
     to story  screens.
   * Fixed [role] not working when no type was specified (bug #12660).

Version 1.5.6:
 * Authoring tools:
   * trackplacer is a pygtk tool that makes it possible to visually edit