@@ -16,6 +16,10 @@ Version 1.5.6+svn:
         line.
     * Under the Burning Suns:
       * Made Elyssa Loyal and Quick instead of Quick and Intelligent.
+  * Editor2
+    * The map editor is automatically started if the binary file used
+      to start Wesnoth contains "editor" somewhere in its name (useful
+      for symlinks).
 
   * Graphics
     * New or updated unit graphics: Gryphon Rider, Gryphon Master,
